Shift requests and trades

--- a/resources/js/lang/en.json
+++ b/resources/js/lang/en.json
@@ -33,8 +33,11 @@
         "translation": "Translation",
         "translation_manager": "Editor",
         "team_settings": "Team Settings",
+        "team_admin": "Team Admin",
+        "site_admin": "Site Admin",
         "join_another_team": "Join Another Team",
         "scheduling": "Scheduling",
+        "shifts": "Shifts",
         "assignments": "Assignments",
         "shift_planning": "Shift Planning",
         "locations": "Locations",
